0.4.0
=====
- [feature] The command line runner has been organized
  into a reusable CommandLine object, so that other
  front-ends can re-use the argument parsing built
  in.  #70

- [bug] Fixed the "multidb" template which was badly out
  of date.   It now generates revision files using
  the configuration to determine the different
  upgrade_<xyz>() methods needed as well, instead of
  needing to hardcode these.  Huge thanks to
  BryceLohr for doing the heavy lifting here.  #71

- [bug] Fixed the regexp that was checking for .py files
  in the version directory to allow any .py file through.
  Previously it was doing some kind of defensive checking,
  probably from some early notions of how this directory
  works, that was prohibiting various filename patterns
  such as those which begin with numbers.  #72

- [bug] Fixed MySQL rendering for server_default which
  didn't work if the server_default was a generated
  SQL expression.  Courtesy Moriyoshi Koizumi.

- [feature] Added support for alteration of MySQL
  columns that have AUTO_INCREMENT, as well as enabling
  this flag.  Courtesy Moriyoshi Koizumi.

0.3.6
=====
- [feature] Added include_symbol option to
  EnvironmentContext.configure(),
  specifies a callable which will include/exclude tables
  in their entirety from the autogeneration process
  based on name.  #27

- [feature] Added year, month, day, hour, minute, second
  variables to file_template.  #59

- [feature] Added 'primary' to the list of constraint types
  recognized for MySQL drop_constraint().

- [feature] Added --sql argument to the "revision" command,
  for the use case where the "revision_environment"
  config option is being used but SQL access isn't
  desired.

- [bug] Repaired create_foreign_key() for
  self-referential foreign keys, which weren't working
  at all.

- [bug] 'alembic' command reports an informative
  error message when the configuration is missing
  the 'script_directory' key.  #63
