@@ -5,6 +5,10 @@
   front-ends can re-use the argument parsing built
   in.  #70
 
+- [feature] Added "stdout" option to Config, provides
+  control over where the "print" output of commands like
+  "history", "init", "current" etc. are sent.  #43
+
 - [bug] Fixed the "multidb" template which was badly out
   of date.   It now generates revision files using
   the configuration to determine the different
